--- a/web/workspace/partials/content-modules/products.dust
+++ b/web/workspace/partials/content-modules/products.dust
@@ -23,7 +23,7 @@
         <strong class="larger block hdr" style="color:#F7287B">cdn</strong>
         <p class="normal">Real-time asset manipulation and delivery application, providing a complete content distribution solution</p>
       </a></div>
-      <div class="col w-1-4 pad__bottom--x2"><a class="block zoom" href="/platform/predict/">
+      {! <div class="col w-1-4 pad__bottom--x2"><a class="block zoom" href="/platform/predict/">
         <div class="product-logo"><img src="/assets/products/dadi-predict.png" width="45"></div>
         <strong class="larger block hdr" style="color:#27DCE0">predict</strong>
         <p class="normal">Scalable and straightforward predictive analysis API with machine learning at its heart</p>
@@ -42,7 +42,7 @@
         <div class="product-logo"><img src="/assets/products/dadi-identity.png" width="25"></div>
         <strong class="larger block hdr" style="color:#5CC617">identity</strong>
         <p class="normal">End-to-end CRM solution that guarantees the uniqueness of individuals – and powers segmentation – in the anonymous and known space</p>
-      </a></div>
+      </a></div> !}
 
       {! <div class="col w-1-1 alignc marg__top"><a class="block zoom" href="/platform/tools/">
         <strong class="larger block hdr">Tools &amp; Components</strong>
