--- a/web/workspace/partials/titles.dust
+++ b/web/workspace/partials/titles.dust
@@ -1,6 +1,6 @@
 {^params}
   {@select key=placement}
-    {@any}<div class="container pad__top pad__bottom ">{/any}
+    {@any}<div class="pad__top pad__bottom ">{/any}
     {@eq value="Platform"}
       <div class="hdr kilo read no-marg-i pad__bottom">A modern microservices framework, built specifically in support of the principles of <span class="txt--red"><a style="border:0" href="/platform/concepts/api-first-and-cope/">API first and COPE</a></span>.</div>
     {/eq}
