--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -38,8 +38,7 @@ body.dark {
 }
 
 @media #{$break-small} {
-	.container--divider,
-	.container--pad {
+	.container {
 		padding-top: 20px;
 		padding-bottom: 20px;
 		padding-left: 8%;
@@ -214,13 +213,13 @@ body.dark {
 
 @media #{$break-small} {
 	.nav {
-		margin: 20px 0 35px;
+		margin: 0 0 25px;
 		a {
 			display: block;
-			margin-right: 10px;
 		}
 		li {
-			width: 50%;			
+			display: inline-block;
+			margin: 0 20px 0 0;
 		}
 	}
 }
