--- a/web/workspace/partials/platform/index.dust
+++ b/web/workspace/partials/platform/index.dust
@@ -5,7 +5,7 @@
 <div class="container container--divider">
   <div class="grid">
     <div class="col w-1-2">        
-      <p class="normal"><strong>DADI</strong> is architected to facilitate cross-functional teams organised around discrete capability, in stark contrast to traditional monolithic approaches to system architecture.</p>
+      <p class="normal"><strong>DADI</strong> is architected to facilitate cross-functional teams organized around discrete capability, in stark contrast to traditional monolithic approaches to system architecture.</p>
 
       <p class="normal"><strong>DADI</strong> is built on <em>Node.JS</em> and <em>MongoDB</em> and provides a series of self-contained service layers which can be run independently or as a whole.</p>
     </div>
