--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -3,9 +3,8 @@
 {<title}{?params.client}{successes.results[0].title} / {/params.client} Success stories{/title}
 
 {^params.client}  
-  <div class="marg cf pad__top--x2">
   {#successes.results}
-    <div class="marg__bottom txt--white bg--black" style="background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%">
+    <div class="marg txt--white bg--black" style="background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%">
       <a href="/success-stories/{handle}/">
         <div class="container">
           <div class="read bl-w-2-3 pad__top--x2 pad__bottom--x2">
@@ -16,8 +15,11 @@
         </div>
       </a>
     </div>
+
+    {@eq key="{$idx}" value="2"}
+      {>"partials/solutions/list" /}
+    {/eq}
   {/successes.results}
-  </div>
 {:else}
   {#successes.results}
     <div class="container container--pad alignc">
@@ -62,6 +64,8 @@
       </div>
     </div>
   {/successes.results}
+
+  {>"partials/solutions/list" /}
 {/params.client}
 
 {>"partials/footer" /}
