--- a/web/workspace/partials/platform/concepts.dust
+++ b/web/workspace/partials/platform/concepts.dust
@@ -23,7 +23,7 @@
     </div>
     <div class="container container--divider normal">
       <div class="grid">
-        <div class="col w-2-3">
+        <div class="col w-2-3 read">
           {@markdown}{body}{/markdown}
         </div>
         <div class="col w-1-3">
