--- a/web/workspace/pages/on-demand.dust
+++ b/web/workspace/pages/on-demand.dust
@@ -2,23 +2,14 @@
 
 {<title}On-demand{/title}
 
-<div class="container container--pad marg__top">
-
-  <div class="grid">
-    <div class="col w-1-2">
-  <p class="kilo hdr read pad__bottom no-marg-i"><span class="txt--red block">Cloud computing.</span> Designed for developers.</p>
-  </div>
-
-  <div class="col w-1-2">
-
+<div class="container pad__bottom--x2 marg__top alignc">
+  <p class="medium hdr alignauto pad__bottom">Let us know your email address to be the first to know.</p>
+  
   <form action="http://mail.dadi.tech/t/i/s/ptyhjt/" method="post">
     <input name="cm-ptyhjt-ptyhjt" type="email" class="email text" placeholder="Your email address"><button class="btn btn--blue" type="submit">Register interest</button>
   </form>
 
   <p class="small txt--grey alignauto">By signing up you agree to the <a href="/privacy" class="txt--black">Privacy Policy</a>.</p>
-  </div>
-
-  </div>
 </div>
 
 <div class="bg--light-grey bdr__top bdr__bottom bdr--bdr-grey">
