--- a/web/workspace/partials/header.dust
+++ b/web/workspace/partials/header.dust
@@ -12,11 +12,15 @@
 <body class="{+bodyClass}light{/bodyClass}">
 
 <div class="top {?params.section}top--{params.section}{/params.section}">
-  {?page.color}
-    {>"partials/pattern" primary=page.color /}
+  {?params.product}
+    {>"partials/pattern" primary=products.results[0].dark-color /}
   {:else}
-    {>"partials/pattern" primary="#041628" /}
-  {/page.color}
+    {?page.color}
+      {>"partials/pattern" primary=page.color /}
+    {:else}
+      {>"partials/pattern" primary="#041628" /}
+    {/page.color}
+  {/params.product}
 
   <div class="container"> 
     {>"partials/navigation" /}
