--- a/web/workspace/partials/platform/index.dust
+++ b/web/workspace/partials/platform/index.dust
@@ -1,19 +1,4 @@
-<div class="container pad__bottom--x2">
-  <div class="grid">
-    <div class="col w-1-2">        
-      <p class="normal"><strong>DADI</strong> is architected to facilitate cross-functional teams organized around discrete capability, in stark contrast to traditional monolithic approaches to system architecture.</p>
-
-      <p class="normal"><strong>DADI</strong> is built on <em>Node.JS</em> and <em>MongoDB</em> and provides a series of self-contained service layers which can be run independently or as a whole.</p>
-    </div>
-    <div class="col w-1-2">
-      <p class="normal"><strong>DADI</strong> is unique in its approach to data: the entire platform is built to facilitate <a href="/platform/concepts/data-driven-experiences/" class="txt--red fwb">Data Driven Experiences</a>. It enables the concept of the individual at the heart of the platform, creating real-time, person-level taxonomies of interest, and providing multiple actionable data points to enable the construction of individual-specific experiences.</p>
-    </div>
-  </div>
-
-  <p><a href="/platform/concepts/" class="btn btn--red normal">Read about the core concepts</a></p>
-</div>
-
-<div class="container container--divider alignc">
+<div class="container container--pad alignc">
   <div class="grid normal fwb">
     <div class="col w-1-4"><a href="https://github.com/dadi/">
       <img src="/assets/img/logo-github.png" height="45" class="alignv">
@@ -32,6 +17,21 @@
       <span class="pad__top block">On demand</span>
     </a></div>
   </div>
+</div>
+
+<div class="container container--divider pad__bottom--x2">
+  <div class="grid">
+    <div class="col w-1-2">        
+      <p class="normal"><strong>DADI</strong> is architected to facilitate cross-functional teams organized around discrete capability, in stark contrast to traditional monolithic approaches to system architecture.</p>
+
+      <p class="normal"><strong>DADI</strong> is built on <em>Node.JS</em> and <em>MongoDB</em> and provides a series of self-contained service layers which can be run independently or as a whole.</p>
+    </div>
+    <div class="col w-1-2">
+      <p class="normal"><strong>DADI</strong> is unique in its approach to data: the entire platform is built to facilitate <a href="/platform/concepts/data-driven-experiences/" class="txt--red fwb">Data Driven Experiences</a>. It enables the concept of the individual at the heart of the platform, creating real-time, person-level taxonomies of interest, and providing multiple actionable data points to enable the construction of individual-specific experiences.</p>
+    </div>
+  </div>
+
+  <p><a href="/platform/concepts/" class="btn btn--red normal">Read about the core concepts</a></p>
 </div>
 
 {>"partials/content-modules/products" /}
