--- a/web/workspace/partials/titles.dust
+++ b/web/workspace/partials/titles.dust
@@ -26,6 +26,17 @@
     {@eq value="Contact"}
       <div class="inline-block hdr kilo read no-marg-i pad__bottom">Get in touch with the team</div>
     {/eq}
+    {@eq value="Working with DADI"}
+      <div class="grid">
+        <div class="col w-1-2">
+          <p class="inline-block hdr larger read no-marg-i pad__bottom">We believe that technology can solve real business problems by enabling integrated experiences that drive growth.</p>
+        </div>
+        <div class="col w-1-2">
+          <p class="medium no-marg-i">We integrate all disciplines — strategy, user experience and technology — throughout every engagement, from beginning to end. We work across devices and channels, focusing on your entire digital ecosystem, with content, mobile and commerce at its core.</p>
+          <p class="pad__top"><a href="/contact/" class="btn btn--green normal">Contact us</a></p>
+        </div>
+      </div>
+    {/eq}
     {@any}</div>{/any}
   {/select}
 
