--- a/web/workspace/partials/platform/product.dust
+++ b/web/workspace/partials/platform/product.dust
@@ -19,7 +19,8 @@
     <ul class="list--no-style grid normal">
       {#keyPoints}
         <li class="col w-1-3 pad__bottom">
-          <strong class="block">{title}</strong> {@soberMarkdown}{description}{/soberMarkdown}
+          {?image}<img src="/assets/illustrations/{image|s}" style="max-height: 150px;width: auto;">{/image}
+          <strong class="block" style="color:{color}">{title}</strong> {@soberMarkdown}{description}{/soberMarkdown}
         </li>
       {/keyPoints}
     </ul> 
