--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -30,7 +30,7 @@
   </div>  
 {/top}
 
-<div class="container container--divider">
+<div class="container container--pad">
   <div class="grid">
     <div class="col w-1-2">
       <p class="hdr larger">A ground up reimagination of web tech, built on a breakthrough thought:</p>
@@ -44,16 +44,16 @@
   </div>
 </div>
 
-<div class="container container--pad normal">
-  <div class="grid">
-    <div class="col w-1-3 marg__bottom--x2"><strong class="hdr medium block">Next-generation content management</strong> Get your content into the hands of your users, whether on mobile, tablet, games console, television or desktop.</div>
-    <div class="col w-1-3 marg__bottom--x2"><strong class="hdr medium block">Hyper-personalize</strong> Stop treating all users the same – give them editorial you know they will read and products you know they will buy.</div>
-    <div class="col w-1-3 marg__bottom--x2"><strong class="hdr medium block">Know your product</strong> Take the guess work out of development with market-leading analytics driven by fact not averages.</div>
+<div class="container container--divider normal">
+  <div class="grid marg__top marg__bottom--x2">
+    <div class="col w-1-3"><strong class="hdr medium block">Next-generation content management</strong> Get your content into the hands of your users, whether on mobile, tablet, games console, television or desktop.</div>
+    <div class="col w-1-3"><strong class="hdr medium block">Hyper-personalize</strong> Stop treating all users the same – give them editorial you know they will read and products you know they will buy.</div>
+    <div class="col w-1-3"><strong class="hdr medium block">Know your product</strong> Take the guess work out of development with market-leading analytics driven by fact not averages.</div>
   </div>
-  <div class="grid">
-    <div class="col w-1-3 marg__bottom--x2"><strong class="hdr medium block">Succeed faster</strong> The pace to get to MVP quickly and the tools to properly measure performance as you iterate.</div>
-    <div class="col w-1-3 marg__bottom--x2"><strong class="hdr medium block"> Open Source end to end</strong> Enterprise muscle without the fat – or the greedy licence fees.</div>
-    <div class="col w-1-3 marg__bottom--x2"><strong class="hdr medium block">Your product as CRM</strong> Manage (and target) every interaction with your users. Never miss a moment to build a relationship.</div>
+  <div class="grid marg__bottom--x2">
+    <div class="col w-1-3"><strong class="hdr medium block">Succeed faster</strong> The pace to get to MVP quickly and the tools to properly measure performance as you iterate.</div>
+    <div class="col w-1-3"><strong class="hdr medium block"> Open Source end to end</strong> Enterprise muscle without the fat – or the greedy licence fees.</div>
+    <div class="col w-1-3"><strong class="hdr medium block">Your product as CRM</strong> Manage (and target) every interaction with your users. Never miss a moment to build a relationship.</div>
   </div>
 </div>
 
