--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -566,15 +566,16 @@ textarea {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none; }
-.cf:before,
-.cf:after {
+.cf:before, .card:before,
+.cf:after,
+.card:after {
   content: " ";
   /* 1 */
   display: table;
   /* 2 */ }
-.cf:after {
+.cf:after, .card:after {
   clear: both; }
-.cf {
+.cf, .card {
   *zoom: 1; }
 .no-float {
   float: none; }
@@ -1307,8 +1308,7 @@ h5, .small {
 .btn--green.btn--fill {
     background: #88C24C; }
 .btn.btn--disabled,
-.btn.btn--disabled:hover
-.btn.btn--disabled:active {
+.btn.btn--disabled:hover .btn.btn--disabled:active {
   background: #E5E4E4;
   color: #aaa;
   cursor: not-allowed; }
@@ -1516,6 +1516,71 @@ select {
     margin-left: 12px; }
 .list--pipe li:after {
   content: '|'; }
+.card {
+  padding: 20px;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.02);
+  border: 1px solid #E0E0E0;
+  border-radius: 4px;
+  position: relative;
+  margin-bottom: 30px;
+  background-color: #fff; }
+.card > a {
+    display: block; }
+.card--visual {
+    border: 0;
+    background: #17273F;
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1); }
+.card__status {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 4px;
+    border-radius: 3px 0 0 3px;
+    z-index: 2; }
+.card__footer {
+    padding: 15px 10px;
+    margin-top: 20px;
+    margin-bottom: -15px;
+    border-top: 1px solid #E0E0E0;
+    border-radius: 0 0 3px 3px; }
+.card__image {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    bottom: -10px;
+    left: -10px;
+    z-index: 0;
+    background-size: 100%;
+    background-size: cover;
+    opacity: 0.3;
+    -webkit-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
+    -webkit-filter: blur(2px);
+            filter: blur(2px); }
+.card__header, .card__footer {
+    position: relative; }
+.card__footer {
+    z-index: 1; }
+.card__desc {
+    margin-bottom: 5px; }
+.card__desc {
+    line-height: 20px; }
+.card--visual .card__header {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
+.card--visual input {
+    color: #fff; }
+.card:hover .card__image {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    -webkit-filter: blur(0px);
+            filter: blur(0px); }
+.card:hover .card__note {
+    opacity: 1; }
 body {
   background: #fff;
   color: #21262D; }
@@ -1534,7 +1599,7 @@ body.dark main {
     padding-bottom: 40px; }
 .container--divider {
     border-top: 1px solid #e8f0f7; }
-.container--divider:first-of-type() {
+.container--divider:first-of-type {
       border-top: 0; }
 .container--pad:first-of-type {
     padding-top: 30px; }
@@ -1618,8 +1683,7 @@ main:before {
     background: #fff;
     height: 100px;
     display: block;
-    z-index: -1;
-    box-shadow: 0 -15px 20px 0 rgba(8, 14, 23, 0.3); }
+    z-index: -1; }
 .top__bg {
   position: absolute;
   top: 0;
@@ -1742,7 +1806,7 @@ form .text:active, form .text:hover, form .text:focus {
 .read h1, .read h2, .read h3, .read h4 {
     margin: 2em auto 0;
     max-width: 680px; }
-.read h1:first-of-type(), .read h2:first-of-type(), .read h3:first-of-type(), .read h4:first-of-type() {
+.read h1:first-of-type, .read h2:first-of-type, .read h3:first-of-type, .read h4:first-of-type {
       margin-top: 0; }
 .read img {
     max-width: 100%;
