--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -319,6 +319,10 @@ form {
 			margin-top: 0;
 		}
 	}
+	> h1:first-child,
+	> h2:first-child {
+		margin-top: 0.5em auto 0;
+	}
 	img {
 		max-width: 100%;
 		height: auto;
