Fix margin decleration

--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -321,7 +321,7 @@ form {
 	}
 	> h1:first-child,
 	> h2:first-child {
-		margin-top: 0.5em auto 0;
+		margin-top: 0.5em;
 	}
 	img {
 		max-width: 100%;
