--- a/web/workspace/partials/code-examples/cdn.dust
+++ b/web/workspace/partials/code-examples/cdn.dust
@@ -17,7 +17,7 @@
     {~s}{~s}}{~n}
     }</pre></code>
 
-    <p>Corrospinding URL:</p>
+    <p>Corresponding URL:</p>
 
     <code class="small"><pre>http://youdomain.com{~n}
     {~s}{~s}/example-recipe-name{~n}
