--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -8,7 +8,7 @@
   <div class="grid">
     <div class="col w-1-2 marg__bottom--x2 pad__top">
       <p class="hdr kilo no-marg-i txt--blue">The technology of the web, reinvented.</p>
-       <p class="normal"><strong>DADI</strong> is a powerful, <a href="/platform/concepts/api-first-and-cope/" class="concept">API-first</a> development stack for products of all sizes and scale. It enables real-time, personalized experiences driven by machine learning.</p>
+       <p class="normal"><strong>DADI</strong> is a powerful, <a href="/platform/concepts/api-first-and-cope/" class="concept">API-first</a> suite of microservices for products of all sizes and scale. It enables real-time, personalized experiences driven by machine learning.</p>
       <p class="normal pad__top"><a href="/platform/" class="btn btn--blue">How it works</a></p>
     </div>
     <div class="col w-1-2">
